# libuvc

./: CMakeLists.txt  README.md
include/libuvc/: libuvc.h  libuvc_internal.h
src/: stream.c
test/: CMakeLists.txt  callback.h  test.c  uvc_thd.c  uvc_thd.h
